Complete Fatteh Recipe in CSS and HTML

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./recipes/fatteh.html"> <strong>Fatteh</strong></a>
+    <a href="./recipes/fatteh/fatteh.html"> <strong>Fatteh</strong></a>
     
 </body>
 </html>
