--- a/recipes/fatteh/fatteh.html
+++ b/recipes/fatteh/fatteh.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">  
+    <link rel="stylesheet" href="fatteh.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fatteh</title>
 </head>
 <body>
-   <center> <h1><strong>Fatteh</strong></h1> <br>
-
-</center>
-
-
-    
+   <center> <h1 class="title"><strong>Fatteh</strong></h1> <br>
+        <img class="recipe-pic" src="imgs/fatteh.webp" alt="Fatteh">
+   </center>
+   <p class="intro">One of our favorite Egyptian food recipes in this Egyptian fattah. Spiced boiled lamb/beef served over a bed of rice and toasted pita bread then served with garlicky warm tomato sauce. A feast in your mouth.</p>
+   
+   <div class="ing-list">
+       <ul>Main Ingredients
+        <li>Beef </li>
+        <li>Vegetables</li>
+        <li>Rice</li>
+        <li>Bread</li>
+       </ul>
+   </div>
+   <div class="steps">
+    <ol> Steps
+            <li>In a deep pot melt butter or ghee over medium-high heat, add mastic, and stir until mastic pieces are melted.</li>
+            <li>Add meat cubes and brown all over.</li><li>Add the bay leaves, sugar, black pepper and cardamom, stir to combine.</li>
+            <li>Add onion, garlic, tomato, celery, and carrots. Mix everything well together. Pour in hot boiling water to cover. Remove any foam rising at the surface. Bring the pot to a boil, reduce heat. Cover the pot loosely and let simmer until done. Add salt in the last 5 minutes of cooking. Strain broth and take the meat out with a slotted spoon and cover with plastic wrap as we will need them later.</li>
+    </ol>
+   </div>
 </body>
 </html>
