Finish UP Index Page. Last Commit.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
+<style>
+    body{
+        background-image: url("wallpaper.jpg");
+    }
+    .img{
+        width:500px;
+        border-width: 20px;
+        border-style: solid;
+        border-radius: 20px;
+    }
+    .links{
+        font-size: 100px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-weight: bold;
+        margin-left:100px;
+    }
+    .links:hover{
+        fill-opacity: 0.5;
+        color: black;
+    }
+</style>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>odin-recipes</title>
 </head>
 <body>
-    <a href="./recipes/fatteh/fatteh.html"> <strong>Fatteh</strong></a>
+    <center>
+        <h1 style="font-style:bold; color:brown; padding-bottom:10px;">Egyptian Recipes</h1>
+        <img class="img" src="index.jpeg">
+    </center>
+
+        <a class="links" href="./recipes/fatteh/fatteh.html"> <strong>Fatteh</strong></a>
+        <br>
+        <a class="links" href="./recipes/bamya/bamya.html"> <strong>Bamya</strong></a>
+        <br>
+        <a class="links" href="./recipes/sobia/sobia.html"> <strong>Sobia</strong></a>
+
     
 </body>
 </html>
